styles.scss
@use "sass:math";

// Bootstrap colors
$white: #fff;
$body-color: #111;
$dark: #333;
$primary: #075ea2;
$success: #167d2e;
$info: #097182;
$input-border-color: #969696;
$navbar-dark-color: rgba($white, 0.8);
$text-dark: #343a40;
$text-muted: rgb(104, 104, 104);
// Responsive texts
$enable-responsive-font-sizes: true;

// Viewports
$viewport-xs: 320px;
$viewport-sm: 576px;
$viewport-md: 768px;
$viewport-lg: 992px;
$viewport-xl: 1200px;
$viewport-xxl: 1320px;

@import "./node_modules/bootstrap/scss/bootstrap.scss";

// Browser Hacks

_::-webkit-full-page-media, _:future, :root select {
  // https://browserstrangeness.bitbucket.io/css_hacks.html#safari
  -webkit-appearance: none;
  background-image: url("./public/img/chevron-down.png") !important;
  background-position: right 8px center;
  background-repeat: no-repeat;
  padding-right: 20px;
}

// Fixes a glitch in Chrome with input[number] making the arrows hardly
// actionnable when float numbers are rounded
input[type=number].no-arrows::-webkit-outer-spin-button,
input[type=number].no-arrows::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

// App styles

body {
  // Note: This is for header and footer to occupy the whole height of the
  // available viewport. Main content area is white background.
  background-color: $dark;
  min-width: 320px;
}

blockquote {
  q {
    font-family: Blanco, Georgia, serif;
    quotes: "“" "”" "‘" "’";
    &::before {
      content: open-quote;
    }
    &::after {
      content: close-quote;
    }
  }
}

.bottomed-paragraphs {
  p:last-child {
    margin-bottom: 0;
  }
}

.bg-primary-gradient {
  background: $primary;
  background: linear-gradient(15deg, #054a80, $primary);
}

.fs {
  &-7 {
    font-size: 0.85rem;
  }

  &-unit {
    font-size: .7em;
  }

  &-80p {
    font-size: 80%;
  }
}

.link {
  &-external:not(.link-external-muted) {
    &::after {
      font-family: "icomoon" !important;
      content: "\e908";
      display: inline-block;
      text-indent: 2px;
      font-size: .9em;
      color: currentColor;
      font-style: normal;
      font-weight: normal;
      font-variant: normal;
      text-transform: none;
      vertical-align: text-top;
      line-height: 1;
      -webkit-font-smoothing: antialiased;
      -moz-osx-font-smoothing: grayscale;
    }
  }

  &-email {
    &::before {
      font-family: "icomoon" !important;
      content: "\f0e0";
      display: inline-block;
      text-indent: 2px;
      font-size: .9em;
      color: currentColor;
      font-style: normal;
      font-weight: normal;
      font-variant: normal;
      text-transform: none;
      vertical-align: baseline;
      line-height: 1;
      margin-right: 3px;
      -webkit-font-smoothing: antialiased;
      -moz-osx-font-smoothing: grayscale;
    }
  }
}

.no-scroll-chaining {
  // Avoid y-scroll chaining
  // @see https://ishadeed.com/article/prevent-scroll-chaining-overscroll-behavior/
  overscroll-behavior-y: contain;
  overflow-y: auto;
}

.text-light-all {
  color: $white;
  a {
    color: $white;
  }
}

.invert {
  filter: invert(1);
}

.Abbr {
  font-weight: normal;
  cursor: help;
  border-bottom: 1px dashed $primary;
}

.Chevrons {
  $chevrons-radius: 4px;
  $chevrons-size: 12px;
  font-size: 0.75em;
  font-weight: bold;
  padding: 0;
  margin: 0;
  display: flex;
  justify-content: center;
  overflow-x: auto;

  li {
    display: inline-block;
    line-height: $chevrons-size;
    margin-right: 5px;
    position: relative;
    padding: math.div($chevrons-size, 2);

    @media screen and (max-width: $viewport-sm) {
      span {
        display: inline-block;
        max-width: 16vw;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
      }
    }

    &:before, &:after {
      position: absolute;
      right: 100%;
      content: "";
      top: 0;
      bottom: 0;
      border-style: solid;
      border-color: red; // remove me or adapt
      border-width: $chevrons-size 0 $chevrons-size math.div($chevrons-size, 2);
    }

    &:nth-child(odd) {
      background: $white;
      color: $primary;
      &:before {
        background: $primary;
        border-color: $primary;
        border-left-color: transparent;
      }
      &:after {
        background: $white;
        border-color: transparent;
        border-left-color: $primary;
      }
    }

    &:nth-child(even) {
      background: $primary;
      color: $white;
      &:before {
        background: $white;
        border-color: $white;
        border-left-color: transparent;
      }
      &:after {
        background: $primary;
        border-color: transparent;
        border-left-color: $white;
      }
    }

    &:first-child {
      &:before, &:after {
        content: none;
      }
      border-bottom-left-radius: $chevrons-radius;
      border-top-left-radius: $chevrons-radius;
    }

    &:last-child {
      border-bottom-right-radius: $chevrons-radius;
      border-top-right-radius: $chevrons-radius;
      margin-right: 0;
    }
  }
}

.DatasetTable {
  th {
    min-width: 120px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }
}

.GitbookContent {
  font-size: 0.9rem;

  h1 { font-size: 1.8em; }
  h2 { font-size: 1.65em; }
  h3 { font-size: 1.5em; }
  h4 { font-size: 1.25em; }
  img { max-width: 100%; }
  .mark {
    padding: 0;
    p { display: inline; }
  }

  table {
    width: 100%;
    margin-bottom: 1.5em;
    border-radius: 4px;
    border-collapse: collapse;
    overflow: hidden;


    thead {
      background-color: $dark;
      color: $white;

      th {
        padding: .5em .5em;
      }
    }

    tbody {
      tr {
        border-bottom: 1px solid #ddd;

        &:nth-child(even) {
          background-color: #f0f0f0;
        }

        td {
          padding: .5em .5em;
          p {
            margin: 0;
            a {
              p {
                // Note: This is because of two bugs:
                // - Gitbook markdown exposes raw HTML within cells (paragraphs)
                // - elm-markdown transforms all link node children as paragraphs
                display: inline;
              }
            }
          }
        }
      }
    }
  }
}

.Header {
  @media screen and (max-width: $viewport-sm) {
    position: sticky;
    top: 0;
    z-index: 1020;
  }
}

.ImpactDefinition {
  p:not(:last-child) {
    margin-bottom: 5px;
  }
}

.MainMenu {
  @media screen and (max-width: $viewport-sm) {
    width: 100%;
  }
}

.Markdown {
  h2 {
    border-top: 1px solid #ccc;
    font-size: 1.5em;
    padding: 1em 0 .5em;
    margin-top: 1em;
  }

  h3 {
    font-size: 1.25em;
    padding: 1em 0 .5em;
    margin-top: .85em;
  }

  blockquote {
    color: $text-dark;
    border-left: 5px solid #ccc;
    font-style: italic;
    padding-left: .5em;
  }

  pre {
    background-color: rgb(14, 14, 36);
    border-radius: 8px;
    color: #fff;
    padding: 1em;
  }
}

.Simulator {
  @media screen and (max-width: $viewport-sm) {
    margin-top: 160px;

    >h1 {
      display: none;
    }
  }
}

.StagingAlert {
  position: fixed;
  background-color: orange;
  bottom: 0;
  left: 0;
  right: 0;
  text-align: center;
  z-index: 1030;
  font-size: 90%;
  button {
    font-size: 1em;
  }
}

.Summary {
  &ProductImage {
    width: 3.5em;
    height: 3.5em;
  }

  @media screen and (max-width: $viewport-sm) {
    position: fixed;
    z-index: 1020;
    top: 100px;
    left: 0;
    right: 0;

    &ProductImage {
      width: 2em;
      height: 2em;
    }

    .card {
      border: 0;
      .card-header {
        border-radius: 0;
      }
      .card-body {
        padding: 10px;
      }
    }

    .card-header {
      color: red;
    }
  }
}

